--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -7,81 +7,95 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <style>
         body {
-        font-family: 'Segoe UI', sans-serif;
-        background: linear-gradient(135deg, #dbeafe, #f0f9ff);
-        margin: 0;
-        padding: 0;
+            font-family: 'Segoe UI', sans-serif;
+            background: linear-gradient(135deg, #dbeafe, #f0f9ff);
+            margin: 0;
+            padding: 0;
         }
         .container {
-        max-width: 800px;
-        margin: 60px auto;
-        background-color: rgba(255, 255, 255, 0.95);
-        padding: 40px;
-        border-radius: 15px;
-        box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+            max-width: 800px;
+            margin: 60px auto;
+            background-color: rgba(255, 255, 255, 0.95);
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
         }
         h2 {
-        text-align: center;
-        margin-bottom: 30px;
-        font-size: 26px;
-        color: #1e3c72;
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 26px;
+            color: #1e3c72;
         }
         .tabs {
-        display: flex;
-        justify-content: space-around;
-        margin-bottom: 30px;
-        border-bottom: 2px solid #ccc;
+            display: flex;
+            justify-content: space-around;
+            margin-bottom: 30px;
+            border-bottom: 2px solid #ccc;
         }
         .tabs button {
-        background: none;
-        border: none;
-        color: #1e3c72;
-        padding: 10px 15px;
-        cursor: pointer;
-        font-size: 16px;
-        border-bottom: 3px solid transparent;
+            background: none;
+            border: none;
+            color: #1e3c72;
+            padding: 10px 15px;
+            cursor: pointer;
+            font-size: 16px;
+            border-bottom: 3px solid transparent;
         }
         .tabs button.active {
-        border-bottom: 3px solid #facc15;
-        font-weight: bold;
+            border-bottom: 3px solid #facc15;
+            font-weight: bold;
         }
         .hidden { display: none; }
         input, select {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        border-radius: 8px;
-        border: 1px solid #ccc;
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 8px;
+            border: 1px solid #ccc;
         }
         button.submit {
-        background-color: #1e40af;
-        color: white;
-        font-weight: bold;
-        padding: 10px 15px;
-        border-radius: 8px;
-        border: none;
+            background-color: #1e40af;
+            color: white;
+            font-weight: bold;
+            padding: 10px 15px;
+            border-radius: 8px;
+            border: none;
         }
         #map { height: 400px; border-radius: 10px; margin-top: 20px; }
         .film-menu {
-        display: flex;
-        gap: 15px;
-        overflow-x: auto;
-        padding: 10px 0;
+            display: flex;
+            gap: 15px;
+            overflow-x: auto;
+            padding: 10px 0;
         }
-        .film-menu video {
-        width: 150px;
-        height: 100px;
-        object-fit: cover;
-        cursor: pointer;
-        margin: 5px;
-        border-radius: 8px;
+        .film-menu img {
+            width: 100px;
+            height: 150px;
+            object-fit: cover;
+            cursor: pointer;
+            margin: 5px;
+            border-radius: 8px;
+            transition: transform 0.2s;
+        }
+        .film-menu img:hover {
+            transform: scale(1.05);
+        }
+        .video-container video {
+            width: 100%;
+            border-radius: 10px;
+            margin-top: 20px;
         }
         .video-container iframe {
-        width: 100%;
-        height: 400px;
-        border: none;
-        border-radius: 10px;
-        margin-top: 20px;
+            width: 100%;
+            height: 400px;
+            border: none;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+        @media (max-width: 600px) {
+            .container { padding: 10px; }
+            .film-menu img { width: 70px; height: 100px; }
+            #map, .video-container video, .video-container iframe { height: 220px; }
         }
     </style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
@@ -118,8 +132,8 @@
 
     <div id="assistanceForm" class="hidden">
         <h2>Demande d'assistance</h2>
-        <input type="text" id="nom" placeholder="Nom">
-        <input type="text" id="prenom" placeholder="Prénom">
+        <input type="text" id="nom" placeholder="Nom" autocomplete="name">
+        <input type="text" id="prenom" placeholder="Prénom" autocomplete="given-name">
         <select id="genre">
             <option value="">Genre</option>
             <option>Homme</option>
@@ -127,7 +141,7 @@
             <option>Autre</option>
         </select>
         <input type="number" id="age" placeholder="Âge">
-        <input type="email" id="email" placeholder="Email">
+        <input type="email" id="email" placeholder="Email" autocomplete="email">
         <select id="handicap">
             <option value="">Type de handicap</option>
             <option>Mobilité réduite</option>
@@ -163,7 +177,8 @@
 
 <script>
 const apiBase = "https://api.localhost";  // Adapte si besoin !
-// --------- Login
+
+// Login
 function checkLogin() {
     const trainNumber = document.getElementById("trainNumber").value.trim();
     const lastName = document.getElementById("lastName").value.trim();
@@ -177,7 +192,7 @@ function checkLogin() {
     }
 }
 
-// ----------- Onglets
+// Onglets
 function showSection(id, button) {
     document.querySelectorAll('.tabs button').forEach(btn => btn.classList.remove('active'));
     document.querySelectorAll('#geoSection, #multimediaSection, #assistanceForm, #scheduleSection').forEach(sec => sec.classList.add('hidden'));
@@ -187,42 +202,44 @@ function showSection(id, button) {
     if (id === 'multimediaSection') loadFilms();
 }
 
-// ----------- Carte
+// Carte Leaflet
+let leafletMap = null;
+let geoRoute = null;
 function initMap() {
-    if (window.leafletMap) return; // ne pas dupliquer !
+    if (leafletMap) return;
     const gares = {
         "Paris": [48.8566, 2.3522],
         "Amsterdam": [52.379189, 4.899431],
         "Londres": [51.5074, -0.1278],
         "Lisbonne": [38.7169, -9.1399]
     };
-    const map = L.map('map').setView([48.8566, 2.3522], 5);
-    window.leafletMap = map;
+    leafletMap = L.map('map').setView([48.8566, 2.3522], 5);
     L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
         attribution: '© OpenTopoMap, © OpenStreetMap contributors'
-    }).addTo(map);
+    }).addTo(leafletMap);
+
     for (let ville in gares) {
-        const marker = L.marker(gares[ville]).addTo(map).bindPopup(ville);
+        const marker = L.marker(gares[ville]).addTo(leafletMap).bindPopup(ville);
         marker.on('click', () => {
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(pos => {
                     const userLatLng = [pos.coords.latitude, pos.coords.longitude];
                     const destinationLatLng = gares[ville];
-                    if (window.geoRoute) { window.leafletMap.removeControl(window.geoRoute); }
-                    window.geoRoute = L.Routing.control({
+                    if (geoRoute) { leafletMap.removeControl(geoRoute); }
+                    geoRoute = L.Routing.control({
                         waypoints: [
                             L.latLng(userLatLng[0], userLatLng[1]),
                             L.latLng(destinationLatLng[0], destinationLatLng[1])
                         ],
                         routeWhileDragging: false
-                    }).addTo(map);
+                    }).addTo(leafletMap);
                 }, () => alert("Position non disponible."));
             } else { alert("Géolocalisation non supportée."); }
         });
     }
 }
 
-// ----------- Multimédia MinIO
+// Multimédia MinIO
 const films = [
     { name: "paris.mp4", cover: "https://via.placeholder.com/100x150?text=Paris", label: "Paris" },
     { name: "amsterdam.mp4", cover: "https://via.placeholder.com/100x150?text=Amsterdam", label: "Amsterdam" },
@@ -250,10 +267,10 @@ function loadFilms() {
 function selectFilm(url, label) {
     document.getElementById('videoContainer').innerHTML =
         `<video src="${url}" controls autoplay style="width:100%;border-radius:10px;"></video>
-        <div style="text-align:center;font-weight:bold;margin:10px 0">${label}</div>`;
+         <div style="text-align:center;font-weight:bold;margin:10px 0">${label}</div>`;
 }
 
-// ----------- Assistance
+// Assistance
 function submitAssistance() {
     const data = {
         nom: document.getElementById('nom').value,
@@ -278,7 +295,7 @@ function submitAssistance() {
     .catch(() => alert("Erreur lors de l'enregistrement."));
 }
 
-// ----------- Horaires API
+// Horaires API
 function loadSchedule() {
     const station = document.getElementById('stationSelect').value;
     fetch(`${apiBase}/horaires/${station}`)
@@ -293,6 +310,10 @@ function loadSchedule() {
                     <td style='padding: 10px; border: 1px solid #ccc;'>${train.heure}</td>
                 </tr>`;
             });
+        })
+        .catch(() => {
+            document.querySelector('#scheduleTable tbody').innerHTML =
+                `<tr><td colspan="3" style="text-align:center; color:red">Erreur de récupération des horaires…</td></tr>`;
         });
 }
 </script>
