--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -169,6 +169,7 @@
 </div>
 
 <script>
+    const apiBase = "https://api.localhost";
 function checkLogin() {
     const trainNumber = document.getElementById("trainNumber").value.trim();
     const lastName = document.getElementById("lastName").value.trim();
