--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -169,7 +169,7 @@
 </div>
 
 <script>
-    const apiBase = "https://api.localhost";
+    const apiBase = "https://api.envi-fero.ams.h3fero.com";
 function checkLogin() {
     const trainNumber = document.getElementById("trainNumber").value.trim();
     const lastName = document.getElementById("lastName").value.trim();
